<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Vinyl image -->
    <ImageView
        android:id="@+id/vinylImage"
        android:layout_width="371dp"
        android:layout_height="367dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-159dp"
        android:layout_marginEnd="-154dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/HU00_title"
        android:scaleType="centerCrop"
        android:src="@drawable/vinyl" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <!-- Title -->
            <TextView
                android:id="@+id/createAlbumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_condensed_light"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                android:textAllCaps="true"
                android:textSize="34sp"
                android:text="@string/title_add_track_album"
                android:layout_gravity="start"/>

            <!-- Track Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                style="?attr/textInputOutlinedStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trackNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_add_track"
                    android:textColor="@color/white"
                    android:maxLength="100"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Track Duration -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                style="?attr/textInputOutlinedStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trackDurationEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/duration_add_track"
                    android:textColor="@color/white"
                    android:inputType="time"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/addTrackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="24dp"
                app:icon="@android:drawable/ic_menu_add"
                app:iconGravity="textStart"
                app:iconTint="@color/orange"
                android:text="@string/add_track_album"
                style="@style/ButtonStyle"/>

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_track_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="24dp"
                app:icon="@android:drawable/ic_menu_revert"
                app:iconGravity="textStart"
                app:iconTint="@color/black"
                android:text="@string/cancel_album_button"
                style="@style/ButtonAdd"/>





        </LinearLayout>

    </ScrollView>

</RelativeLayout>
