...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <!-- List of albums -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/albumsRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/progressBar"
                android:layout_below="@id/addAlbumButton"
                tools:listitem="@layout/album_item" >

...
