...
                android:layout_height="36dp"
                android:orientation="vertical"
                android:layout_marginTop="30sp">

            <!-- Botón de Volver -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/goBack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/red_button_background"
...
